// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`invalid text input 1`] = `
<textarea
  aria-invalid={true}
  aria-label="invalid textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;

exports[`simple text input 1`] = `
<textarea
  aria-invalid={false}
  aria-label="simple textarea"
  className="pf-c-form-control"
  onChange={[Function]}
  required={false}
  value="test textarea"
/>
`;
